# OOP

./: README.md
01_tdd/project/: CMakeLists.txt
01_tdd/project/include/: RingBuffer.h  TextWrap.h
01_tdd/project/src/: RingBuffer.cpp  TextWrap.cpp
01_tdd/project/tests/: CMakeLists.txt
01_tdd/project/tests/src/: RingBufferTest.cpp  TextWrapTest.cpp
02_observer_qt/project/: project.pro
02_observer_qt/project/cli/: cli.pro  main.cpp
02_observer_qt/project/gui/: gui.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
02_observer_qt/project/tests/acceleration/: tst_accelerationtest.cpp
02_observer_qt/project/tests/displacement/: tst_displacementtest.cpp
02_observer_qt/project/tests/speed/: tst_speedtest.cpp
02_observer_qt/project/utils/: Acceleration.cpp  Acceleration.h  Displacement.cpp  Displacement.h  Speed.cpp  Speed.h  utils.pro
03_text_editor_qt/project/: mainwindow.cpp  mainwindow.ui  project.pro
04_stl_benchmark/project/: CMakeLists.txt
04_stl_benchmark/project/benchmarks/: CMakeLists.txt
04_stl_benchmark/project/benchmarks/src/: LargeBench.cpp  ListBench_Large.cpp  ListBench_Medium.cpp  ListBench_Small.cpp  MediumBench.cpp  MultiMapBench_Large.cpp  MultiMapBench_Medium.cpp  MultiMapBench_Small.cpp  SmallBench.cpp  UnorderedMapBench_Large.cpp  UnorderedMapBench_Medium.cpp  UnorderedMapBench_Small.cpp
04_stl_benchmark/project/include/: Large.h  Medium.h  Small.h
04_stl_benchmark/project/output/containersMethodsBenchmarks/: Large_DEBUG.csv  Large_RELEASE.csv  Medium_DEBUG.csv  Medium_RELEASE.csv  Small_DEBUG.csv  Small_RELEASE.csv
04_stl_benchmark/project/output/operatorsAndHashFunctionsBenchmarks/: Large_OperatorsAndHashFunction_DEBUG.csv  Large_OperatorsAndHashFunction_RELEASE.csv  Medium_OperatorsAndHashFunction_DEBUG.csv  Medium_OperatorsAndHashFunction_RELEASE.csv  Small_OperatorsAndHashFunction_DEBUG.csv  Small_OperatorsAndHashFunction_RELEASE.csv
04_stl_benchmark/project/tests/: CMakeLists.txt
04_stl_benchmark/project/tests/src/: LargeTest.cpp  MediumTest.cpp  SmallTest.cpp
05_warehouse/: CMakeLists.txt
05_warehouse/project/src/: main.cpp
05_warehouse/project/utils/include/: LiquidContainer.h  Warehouse.h
05_warehouse/src/: main.cpp
05_warehouse/utils/src/: LiquidContainer.cpp  Warehouse.cpp
06_design_patterns/project/: CMakeLists.txt
06_design_patterns/project/include/abstract_factory/animals/: Animal.h  AnimalFactory.h  BirdFactory.h  Cod.h  Eagle.h  FishFactory.h  Raven.h  Salmon.h  Sparrow.h  Tuna.h
06_design_patterns/project/include/observer/: Acceleration.h  Displacement.h  Observable.h  Observer.h  Speed.h
06_design_patterns/project/src/: main.cpp
06_design_patterns/project/src/abstract_factory/animals/: BirdFactory.cpp  Cod.cpp  Eagle.cpp  FishFactory.cpp  Salmon.cpp  Sparrow.cpp  Tuna.cpp
06_design_patterns/project/src/observer/: Acceleration.cpp  Displacement.cpp  Observable.cpp  Speed.cpp
06_design_patterns/project/tests/: CMakeLists.txt
06_design_patterns/project/tests/src/: Tests.cpp
